--- a/.env.local.example
+++ b/.env.local.example
@@ -7,3 +7,9 @@ NEXT_PUBLIC_ACCESS_TOKEN=
 PREVIEW_ACCESS_TOKEN=
 # This can by any value you want. Make sure it is the same from the Content Preview URL
 PREVIEW_SECRET=
+
+# Your website URL. Use http://localhost:3000 for local development
+NEXTAUTH_URL=http://localhost:3000
+
+# The Platzi's auth secret
+AUTH_PLATZI_SECRET=
