feat: agregar proveedor de github para iniciar sesión

--- a/.env.local.example
+++ b/.env.local.example
@@ -13,3 +13,8 @@ NEXTAUTH_URL=http://localhost:3000
 
 # The Platzi's auth secret
 AUTH_PLATZI_SECRET=
+
+# Create a new oAuth App on your GitHub
+# https://github.com/settings/apps
+AUTH_GITHUB_ID=
+AUTH_GITHUB_SECRET=
